# membership_dashboard

./: .editorconfig  .env.sample  .gitignore  .gitmodules  .list_name  .mapbox_token  .pre-commit-config.yaml  CONTRIBUTING.md  MembershipDashboard copy.py  MembershipDashboard.py  README.md  data.json  membership_dashboard.py  membership_dashboard_components.py  membership_dashboard_initialization.py  membership_graphs  membership_graphs.py  pyproject.toml  requirements.txt  scan_membership_lists.py  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  coverage.yml  dependency-review.yml  devskim.yml  lint-python.yml  pylint.yml  pytest.yml  python.yml  ruff.yml  scorecards.yml
assets/: dbc.min.css  responsive-sidebar.css
fake_membership_list/: requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_app_py.html  z_5f058954a33b636d_colors_py.html  z_5f058954a33b636d_dark_mode_py.html  z_5f058954a33b636d_sidebar_py.html  z_5f058954a33b636d_status_filter_py.html  z_5f058954a33b636d_value_filter_py.html  z_aee55b7cdf71401b_conftest_py.html  z_aee55b7cdf71401b_test_branch_tagging_py.html  z_aee55b7cdf71401b_test_data_cleaning_py.html  z_aee55b7cdf71401b_test_data_schema_py.html  z_ce4f7e2fdbef2931_counts_py.html  z_ce4f7e2fdbef2931_graphs_py.html  z_ce4f7e2fdbef2931_list_py.html  z_ce4f7e2fdbef2931_map_py.html  z_ce4f7e2fdbef2931_retention_py.html  z_ce4f7e2fdbef2931_timeline_py.html  z_f1b38b22aeb65474_geocoding_py.html  z_f1b38b22aeb65474_retention_py.html  z_f1b38b22aeb65474_scan_lists_py.html  z_f1b38b22aeb65474_schema_py.html
src/: app.py
src/assets/: responsive-sidebar.css
src/components/: colors.py  dark_mode.py  sidebar.py  status_filter.py  value_filter.py
src/pages/: counts.py  graphs.py  list.py  map.py  retention.py  timeline.py
src/utils/: action_network.py  fetch_list.py  geocoding.py  retention.py  scan_lists.py  schema.py
tests/: conftest.py  test_branch_tagging.py  test_data_cleaning.py  test_data_schema.py  test_membership_length.py
tests/test_harness_assets/: fake_branch_zips.csv  fake_membership_list_2020_early.csv  fake_membership_list_2021_early.csv  fake_membership_list_2022_late.csv  fake_membership_list_2023_late.csv
tests/utils/: conftest.py  test_branch_tagging.py  test_data_cleaning.py  test_data_schema.py
tests/utils/assets/: fake_branch_zips.csv  fake_membership_list_2020_early.csv  fake_membership_list_2022_late.csv
utils/: list_schema.py  membership_dashboard_components.py  membership_retention.py  scan_membership_lists.py
