[project]
name = "membership_dashboard"
version = "1.1.0"
readme = "README.md"
requires-python = ">=3.10.0"
license = { "file" = "LICENSE" }
authors = [{ "name" = "bmos", "email" = "wil.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/membership_dashboard" }
dependencies = [
    "dash-bootstrap-components~=2.0",
    "dash-bootstrap-templates~=2.1",
    "dash~=3.2",
    "mapbox~=0.18",
    "numpy~=2.3",
    "pandas~=2.3",
    "pandera~=0.23",
    "plotly~=6.1",
    "python-dotenv~=1.1",
    "ratelimit~=2.2",
    "tqdm~=4.67"
]

[project.optional-dependencies]
dev = [
    "bandit[sarif]==1.8.6",
    "coverage~=7.8",
    "mypy~=1.16",
    "pandas-stubs~=2.2",
    "plotly-stubs~=0.0",
    "pre-commit~=4.2",
    "pytest-cov~=6.1",
    "pytest-xdist~=3.7",
    "pytest~=8.3",
    "ruff==0.12.7",
    "types-ratelimit~=2.2",
    "types-tqdm~=4.67",
]

[tool.ruff]
line-length = 160
target-version = "py310"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TC",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
]

[tool.pytest.ini_options]
addopts = "--cov=src -n auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
relative_files = true
command_line = "-m pytest"

[tool.coverage.paths]
source = [
    "src/",
]
omit = [
    "tests",
]

[tool.coverage.report]
exclude_also = [
    "logger.",
]

[tool.bandit]
exclude_dirs = [
    "./tests/",
    "./.venv/",
]

[[tool.mypy.overrides]]
module = [
  "dash_bootstrap_components",
  "dash_bootstrap_templates",
  "mapbox",
]
ignore_missing_imports = true
